--- a/embeds.html
+++ b/embeds.html
@@ -32,7 +32,9 @@
 
 <!-- <iframe src="https://sophiedixon.github.io/3d-portfolio/uv/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/woody/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe> -->
 
-<iframe src="https://universalviewer.io/examples/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=../examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-198,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
+<!-- <iframe src="https://universalviewer.io/examples/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=../examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-198,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe> -->
+
+<iframe src="http://localhost:8002/examples/uv/./uv.html#?manifest=https://iiif-commons.github.io/iiif-av-component/examples/data/bl/sounds-tests/C733_48.json&c=0&m=0&s=0&cv=0&rid=https://api.bl.uk/metadata/iiif/ark:/81055/vdc_100052320369.0x00001c" width="560" height="420" allowfullscreen frameborder="0"></iframe>
 
 </body>
 </html>
