--- a/embeds.html
+++ b/embeds.html
@@ -5,6 +5,11 @@
 
 <body>
 
+<!-- <div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="https://damsssl.llgc.org.uk/iiif/2.0/4643220/manifest.json" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" data-xywh="-3486,0,14275,6495" data-rotation="0" style="width:100%; height:460px; background-color: #000">
+<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>
+<script type="text/javascript">/* wordpress fix */</script>
+</div> -->
+
 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies ac orci vitae pellentesque. Phasellus dictum dignissim iaculis. Nullam eget fermentum nisl, et auctor leo. Curabitur porta orci magna, non commodo ante placerat sed. Quisque tincidunt justo vel auctor volutpat. Curabitur quis tempus libero, eu blandit libero. Curabitur vitae arcu cursus, porta quam vitae, congue ipsum. Quisque luctus sodales nisi, at ultricies enim dapibus ut. Morbi non lobortis tortor, sit amet ornare purus. Nam nec enim nunc. Sed euismod dictum massa, id placerat diam ultrices ac. Phasellus eget nunc sed justo hendrerit ultricies eget ac erat. Integer vel lectus semper, condimentum odio dapibus, elementum ante. Integer quis scelerisque nunc. Suspendisse id pretium ante, ut porttitor felis.</p>
 
 
@@ -32,7 +37,7 @@
 
 <!-- <iframe src="https://sophiedixon.github.io/3d-portfolio/uv/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/woody/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe> -->
 
-<iframe src="https://universalviewer.io/examples/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=../examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-198,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
+<iframe src="https://universalviewer.io/examples/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=../examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-198,5333,3936&r=0" width="100%" height="420" allowfullscreen frameborder="0"></iframe>
 
 </body>
 </html>
