--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
 
     <!-- Put at the bottom of the page to ensure that the uvLoaded event isn't fired before a listener is registered -->
     <script type="text/javascript" src="uv/uv.js"></script>
+    <!-- <script src="https://unpkg.com/@universalviewer/aleph/dist/aleph/aleph.js"></script> -->
 
 </body>
 </html>
