--- a/uv/uv.html
+++ b/uv/uv.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="uv.css">
-    <script type="text/javascript" src="lib/offline.js"></script>
+    <script type="text/javascript" src="lib/bundle.js"></script>
     <script type="text/javascript" src="helpers.js"></script>
     <style>
         body {
