--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="icon" href="uv/favicon.ico">
     <link rel="stylesheet" type="text/css" href="uv/uv.css">
     <script type="text/javascript" src="https://unpkg.com/@edsilv/utils@0.2.6/dist/Utils.js"></script>
-    <script type="text/javascript" src="../dist-umd/uv.js"></script>
     <script type="text/javascript" src="uv/lib/bundle.js"></script>
+    <!-- <script type="text/javascript" src="https://unpkg.com/requirejs@2.2.0/require.js"></script> -->
     <script type="text/javascript" src="uv/helpers.js"></script>
+    <script type="text/javascript" src="../dist-umd/uv.js"></script>
     <style>
         body {
             margin: 0px;
