--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="https://unpkg.com/@edsilv/utils@0.2.6/dist/Utils.js"></script>
     <script type="text/javascript" src="uv/lib/bundle.js"></script>
     <script type="text/javascript" src="uv/helpers.js"></script>
-    <script type="text/javascript" src="../dist-umd/UV.js"></script>
+    <script type="text/javascript" src="dist-umd/UV.js"></script>
     <style>
         body {
             margin: 0px;
